fixed post padding on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -172,6 +172,11 @@ html {
   margin: 0 auto;
   padding-left: 5%;
   width: 66%;
+
+    @include media-query($on-palm) {
+        width: 100%;
+        padding-left: 0;
+    }
 }
 
 .post-header {
